--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "fcc-voting-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ."
   },
   "repository": {
     "type": "git",
