--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint src",
     "start": "babel-node src"
   },
   "repository": {
@@ -22,6 +22,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.5.2"
-  }
+    "babel-preset-env": "^1.5.2",
+    "eslint": "^3.0.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-compat": "^1.0.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1"
+  },
+  "browserslist": ["> 1%"]
 }
