--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "eslint src",
+    "test": "eslint src && flow",
     "start": "babel-node src"
   },
   "repository": {
@@ -22,13 +22,19 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-compat": "^1.0.3",
+    "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1"
+    "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.48.0"
   },
-  "browserslist": ["> 1%"]
+  "browserslist": [
+    "> 1%"
+  ]
 }
