--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "eslint src && flow",
+    "test": "eslint src && jest --coverage",
     "start": "babel-node src"
   },
   "repository": {
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
     "eslint": "^3.0.0",
@@ -32,7 +33,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.48.0"
+    "flow-bin": "^0.48.0",
+    "jest": "^20.0.4"
   },
   "browserslist": [
     "> 1%"
