--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "babel-node src",
     "test": "eslint src && jest --coverage",
-    "start": "babel-node src"
+    "precommit": "yarn test",
+    "prepush": "yarn test"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.48.0",
+    "husky": "^0.13.4",
     "jest": "^20.0.4"
   },
   "browserslist": [
