--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "babel-node src",
+    "start": "babel-node src/server",
     "test": "eslint src && jest --coverage",
     "precommit": "yarn test",
     "prepush": "yarn test"
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/doctuary/fcc-voting-app#readme",
   "dependencies": {
+    "compression": "^1.6.2",
     "express": "^4.15.3",
     "pug": "^2.0.0-rc.2"
   },
