--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "babel-node src/server",
+    "start": "yarn dev:start",
+    "dev:start": "nodemon --ignore lib --exec babel-node src/server",
     "test": "eslint src && jest --coverage",
     "precommit": "yarn test",
     "prepush": "yarn test"
@@ -38,7 +39,8 @@
     "eslint-plugin-react": "^7.0.1",
     "flow-bin": "^0.48.0",
     "husky": "^0.13.4",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "nodemon": "^1.11.0"
   },
   "browserslist": [
     "> 1%"
