--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "start": "yarn dev:start",
     "dev:start": "nodemon --ignore lib --exec babel-node src/server",
+    "prod:build": "rimraf lib && babel src -d lib --ignore .test.js",
+    "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
+    "prod:stop": "pm2 delete server",
     "test": "eslint src && jest --coverage",
     "precommit": "yarn test",
-    "prepush": "yarn test"
+    "prepush": "yarn test && yarn prod:build"
   },
   "repository": {
     "type": "git",
@@ -30,6 +33,7 @@
     "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
+    "cross-env": "^5.0.1",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-compat": "^1.0.3",
@@ -40,7 +44,9 @@
     "flow-bin": "^0.48.0",
     "husky": "^0.13.4",
     "jest": "^20.0.4",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "pm2": "^2.5.0",
+    "rimraf": "^2.6.1"
   },
   "browserslist": [
     "> 1%"
