--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
     "express": "^4.15.3",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.0-rc.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "next"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -38,6 +41,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.1",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^15.0.1",
