--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "pug": "^2.0.0-rc.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-hot-loader": "next"
+    "react-hot-loader": "next",
+    "redux": "^3.7.0",
+    "redux-actions": "^2.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
