--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pug": "^2.0.0-rc.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-helmet": "^5.1.3",
     "react-hot-loader": "next",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
