--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "homepage": "https://github.com/doctuary/fcc-voting-app#readme",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "bootstrap": "4.0.0-alpha.6",
     "compression": "^1.6.2",
     "express": "^4.15.3",
     "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "pug": "^2.0.0-rc.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -42,7 +44,8 @@
     "redux-actions": "^2.0.3",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "tether": "^1.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
