--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "next",
+    "react-jss": "^5.3.0s",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
