--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "coveralls": "^2.13.1",
     "cross-env": "^5.0.1",
     "eslint": "^3.0.0",
     "eslint-config-airbnb": "^15.0.1",
