--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev:start": "nodemon -e js,jsx --ignore lib --ignore dist --exec babel-node src/server",
     "dev:wds": "webpack-dev-server --progress",
     "prod:build": "rimraf lib && babel src -d lib --ignore .test.js && cross-env NODE_ENV=production webpack -p --progress",
-    "prod:start": "cross-env NODE_ENV=production pm2 start lib/server && pm2 logs",
-    "prod:stop": "pm2 delete server",
+    "prod:start": "heroku local",
     "lint": "eslint src webpack.config.babel.js --ext .js,.jsx",
     "test": "eslint src && jest --coverage",
     "precommit": "yarn test",
-    "prepush": "yarn test && yarn prod:build"
+    "prepush": "yarn test && yarn prod:build",
+    "heroku-postbuild": "yarn prod:build"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,10 @@
     "url": "https://github.com/doctuary/fcc-voting-app/issues"
   },
   "homepage": "https://github.com/doctuary/fcc-voting-app#readme",
+  "engines": {
+    "node": "7.x",
+    "yarn": "0.20.3"
+  },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "bootstrap": "4.0.0-alpha.6",
@@ -71,7 +75,6 @@
     "husky": "^0.13.4",
     "jest": "^20.0.4",
     "nodemon": "^1.11.0",
-    "pm2": "^2.5.0",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.6.1",
     "webpack": "^2.6.1",
